docs/apache-airflow-providers-fab/1.2.1/_sources/_api/airflow/providers/fab/auth_manager/views/user/index.rst.txt
:py:mod:`airflow.providers.fab.auth_manager.views.user`
=======================================================

.. py:module:: airflow.providers.fab.auth_manager.views.user


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.fab.auth_manager.views.user.MultiResourceUserMixin
   airflow.providers.fab.auth_manager.views.user.CustomUserLDAPModelView
   airflow.providers.fab.auth_manager.views.user.CustomUserOAuthModelView
   airflow.providers.fab.auth_manager.views.user.CustomUserOIDModelView
   airflow.providers.fab.auth_manager.views.user.CustomUserRemoteUserModelView
   airflow.providers.fab.auth_manager.views.user.CustomUserDBModelView




.. py:class:: MultiResourceUserMixin


   Remaps UserModelView permissions to new resources and actions.

   .. py:property:: class_permission_name

      Returns appropriate permission name depending on request method name.


   .. py:attribute:: class_permission_name_mapping

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      

   .. py:method:: show(pk)



.. py:class:: CustomUserLDAPModelView(**kwargs)


   Bases: :py:obj:`MultiResourceUserMixin`, :py:obj:`flask_appbuilder.security.views.UserLDAPModelView`

   Customize permission names for FAB's builtin UserLDAPModelView.

   .. py:attribute:: class_permission_name_mapping

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


.. py:class:: CustomUserOAuthModelView(**kwargs)


   Bases: :py:obj:`MultiResourceUserMixin`, :py:obj:`flask_appbuilder.security.views.UserOAuthModelView`

   Customize permission names for FAB's builtin UserOAuthModelView.


.. py:class:: CustomUserOIDModelView(**kwargs)


   Bases: :py:obj:`MultiResourceUserMixin`, :py:obj:`flask_appbuilder.security.views.UserOIDModelView`

   Customize permission names for FAB's builtin UserOIDModelView.


.. py:class:: CustomUserRemoteUserModelView(**kwargs)


   Bases: :py:obj:`MultiResourceUserMixin`, :py:obj:`flask_appbuilder.security.views.UserRemoteUserModelView`

   Customize permission names for FAB's builtin UserRemoteUserModelView.

   .. py:attribute:: class_permission_name_mapping

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


.. py:class:: CustomUserDBModelView(**kwargs)


   Bases: :py:obj:`MultiResourceUserMixin`, :py:obj:`flask_appbuilder.security.views.UserDBModelView`

   Customize permission names for FAB's builtin UserDBModelView.

   .. py:attribute:: class_permission_name_mapping

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


